# try-opencv

./: .gitignore  README.md
dockerfiles/development/basic/: Dockerfile
dockerfiles/u1604-nvidia10-opencv4/: Dockerfile
src/: CMakeLists.txt  video.cpp
src/simple-c/: CMakeLists.txt  hello.cpp
src/simple-c/utils/: CMakeLists.txt  greet.cpp  greet.h
src/simple-opencv/: version.cpp  video.cpp
